Reader: fix misaligned Follow buttons on list items

--- a/client/reader/feed-header/style.scss
+++ b/client/reader/feed-header/style.scss
@@ -18,7 +18,7 @@
 	}
 
 	.follow-button {
-		margin-right: 5px;
+		margin: 4px 5px 0 0;
 
 		@include breakpoint( ">480px" ) {
 			margin-right: 15px;
